--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://www.youtube.com/watch?v=DRFQBkR59KA" target="_blank"
+                  <a href="https://youtu.be/VFidNmSb9qU" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fab fa-youtube"></i></span>
                   <span>YouTube</span>
