--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
             <div class="publication-video">
-              <iframe width="100%" height="400" src="https://www.youtube.com/embed/DRFQBkR59KA" frameborder="0" allowfullscreen></iframe>
+              <iframe width="100%" height="400" src="https://youtu.be/VFidNmSb9qU" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
